--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
-    "audit": "0.0.6",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -47,6 +46,7 @@
   "devDependencies": {
     "@angular/cli": "^7.3.1",
     "@ionic/app-scripts": "3.2.1",
+    "@ionic/lab": "3.1.0",
     "@types/jasmine": "^2.5.41",
     "@types/node": "^11.9.3",
     "angular2-template-loader": "^0.6.2",
